--- a/project.html
+++ b/project.html
@@ -25,13 +25,8 @@
           </div>
         </div>
       </div>
-    <header class="showcase">
-      <div class="container showcase-inner">
-        <img src="images/my-logo.png" alt="images/my-logo.png">
-        <a href="" class="top-nav">Work</a>
-        <a href="" class="top-nav">About</a>
-        <a href="" class="top-nav">Resume</a>
-      </div>
+    <header>
+      <img src="images/my-logo.png" alt="images/my-logo.png">
     </header>
     <div class="main-container">
       <div class="box-1">
