--- a/project.html
+++ b/project.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/vision.css">
     <link rel="stylesheet" href="styles/menu.css">
+    <<link rel="stylesheet" href="styles/hamburger.css">
   </head>
 
   <body>
