--- a/about.html
+++ b/about.html
@@ -10,24 +10,26 @@
 
 </head>
   <body>
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler">
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
+    <div class="nav-bar">
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
           <div>
-            <ul>
-              <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="#">Resume</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Resume</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+      <header>
+        <img src="images/my-logo.png" alt="images/my-logo.png">
+      </header>
     </div>
-    <header>
-      <img src="images/my-logo.png" alt="images/my-logo.png">
-    </header>
         <div class="main-container">
           <img src="images/salvador.png" alt="salvador, bahia" class="salvador">
           <ul>
