--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 
 </head>
   <body>
-    <div class="nav-bar">
+    <nav class="nav-bar">
       <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
@@ -20,16 +20,16 @@
               <ul>
                 <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="resume.html">Resume</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
       <header>
-        <img src="images/my-logo.png" alt="images/my-logo.png">
+        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo">
       </header>
-    </div>
+    </nav>
         <div class="main-container">
           <img src="images/salvador.png" alt="salvador, bahia" class="salvador">
           <ul>
