--- a/project.html
+++ b/project.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <nav class="nav-bar">
       <div class="menu-wrap">
         <input type="checkbox" class="toggler">
         <div class="hamburger"><div></div></div>
@@ -18,17 +19,18 @@
           <div>
             <div>
               <ul>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-    <header>
-      <img src="images/my-logo.png" alt="images/my-logo.png">
-    </header>
+      <header>
+        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo">
+      </header>
+    </nav>
     <div class="main-container">
       <div class="box-1">
         <img src="images/Vision-logo.png" alt="project-name" class="project-name">
