--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
 
 </head>
   <body>
-    <div class="menu-wrap">
-      <input type="checkbox" class="toggler">
-      <div class="hamburger"><div></div></div>
-      <div class="menu">
-        <div>
+    <nav class="nav-bar">
+      <div class="menu-wrap">
+        <input type="checkbox" class="toggler">
+        <div class="hamburger"><div></div></div>
+        <div class="menu">
           <div>
-            <ul>
-              <li><a href="index.html">Work</a></li>
-              <li><a href="about.html">About</a></li>
-              <li><a href="#">Resume</a></li>
-            </ul>
+            <div>
+              <ul>
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="resume.html">Resume</a></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <header>
-      <img src="images/my-logo.png" alt="images/my-logo.png">
-    </header>
+      <header>
+        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo">
+      </header>
+    </nav>
         <div class="main-container">
           <h2> Hi, I'm Alana!</h2>
           <ul>
