--- a/about.html
+++ b/about.html
@@ -27,7 +27,8 @@
         </div>
       </div>
       <header>
-        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo">
+        <a href="index.html">
+          <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
       </header>
     </nav>
         <div class="main-container">
@@ -45,7 +46,8 @@
               <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
             <a href="https://www.facebook.com/alana.macedo.16">
               <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
-            <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media">
+            <a href="contact.html">
+              <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
           </div>
           <h6 class="copyright">Copyright Alana Macedo 2020</h6>
         </footer>
