--- a/contact.html
+++ b/contact.html
@@ -9,24 +9,27 @@
   <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
-  <div class="menu-wrap">
-    <input type="checkbox" class="toggler">
-    <div class="hamburger"><div></div></div>
-    <div class="menu">
-      <div>
+  <nav class="nav-bar">
+    <div class="menu-wrap">
+      <input type="checkbox" class="toggler">
+      <div class="hamburger"><div></div></div>
+      <div class="menu">
         <div>
-          <ul>
-            <li><a href="index.html">Work</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#">Resume</a></li>
-          </ul>
+          <div>
+            <ul>
+              <li><a href="index.html">Work</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a href="resume.html">Resume</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <header>
-    <img src="images/my-logo.png" alt="images/my-logo.png">
-  </header>
+    <header>
+      <a href="index.html">
+        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
+    </header>
+  </nav>
   <div class="contact-section">
     <div class="contact-form">
       <div>
@@ -63,5 +66,17 @@
       </form>
     </div>
   </div>
+  <footer>
+    <h4>Let's connect!</h4>
+    <div class="footer-icons">
+      <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
+        <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
+      <a href="https://www.facebook.com/alana.macedo.16">
+        <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
+      <a href="contact.html">
+        <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
+    </div>
+    <h6 class="copyright">Copyright Alana Macedo 2020</h6>
+  </footer>
 </body>
 </html>
