--- a/project.html
+++ b/project.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/vision.css">
     <link rel="stylesheet" href="styles/menu.css">
-
   </head>
 
   <body>
@@ -28,7 +27,8 @@
         </div>
       </div>
       <header>
-        <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo">
+        <a href="index.html">
+          <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
       </header>
     </nav>
     <div class="main-container">
@@ -245,8 +245,9 @@
           <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
             <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
           <a href="https://www.facebook.com/alana.macedo.16">
-            <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media" width="width" height="height"></a>
-          <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media">
+            <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
+          <a href="contact.html">
+          <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
         </div>
         <h6>Copyright Alana Macedo 2020</h6>
       </footer>
