--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <embed src="./Alana-Macedo-Resume.pdf#toolbar=0" type="application/pdf" width="device-width" height="600px" />
+    <embed src="./Alana-Macedo-Resume.pdf#toolbar=0" type="application/pdf" width="device-width" height="600px;" />
     <a href="./Alana-Macedo-Resume.pdf">Download Resume</a>
   </div>
 </body>
