--- a/project.html
+++ b/project.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/vision.css">
     <link rel="stylesheet" href="styles/menu.css">
   </head>
@@ -239,7 +240,6 @@
           </section>
         </div>
       <footer>
-        <img src="images/back-to-top.png" alt="back to top" class="back-to-top">
         <h4>Let's connect!</h4>
         <div class="footer-icons">
           <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
