--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
+  <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/contact.css">
   <link rel="stylesheet" href="styles/menu.css">
 </head>
