--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/contact.css">
+  <link rel="stylesheet" href="styles/vision.css">
   <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
   <div class="contact-section">
     <div class="contact-form">
       <div>
-        <h1> Want to get in touch?</h1>
+        <h2> Want to get in touch?</h2>
         <p>Send me a message below, I would love to hear from you!</p>
       </div>
       <!-- CONTACT FORM -->
@@ -42,7 +42,7 @@
         <div class="name">
           <label>
             <ul>
-              <li>Full Name:</li>
+              <li class="contact">Full Name:</li>
               <input type="text" name="name">
             </ul>
           </label>
@@ -50,7 +50,7 @@
         <div class="email">
           <label>
             <ul>
-              <li>Email:</li>
+              <li class="contact">Email:</li>
               <input type="text" name="_replyto">
             </ul>
           </label>
@@ -58,12 +58,12 @@
         <div class="message">
           <label>
             <ul>
-              <li>Message:</li>
+              <li class="contact">Message:</li>
               <textarea name="message"></textarea>
             </ul>
           </label>
         </div>
-        <button type="submit">Send Message</button>
+        <button class="submit" type="submit">Send Message</button>
       </form>
     </div>
   </div>
