--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/vision.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/menu.css">
   </head>
 
@@ -80,10 +80,10 @@
                 <p>I conducted a user survey to better understand how and why users use cloud storage. I knew that users liked that they could quickly share content with others, but I wanted to know if they had a process for brainstorming, such as using
                   mood or vision boards.
                 </p>
-                <img src="images/ux-graph.png" alt="" class="center" id="ux-graph">
+                <img src="images/ux-graph.png" alt="" class="center" id="eighty-vw">
                 <p>What people use their cloud storage for most
                 </p>
-                <img src="images/ux-chart.png" alt="" class="center" id="ux-chart">
+                <img src="images/ux-chart.png" alt="" class="center" id="eighty-vw">
                 <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                 </p>
               <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button">VIEW SURVEY</a>
@@ -126,10 +126,10 @@
             <h3>User Flows</h3>
               <p>From the stories, I sketched out each individual flow to begin to create the content strategy.
               </p>
-              <img src="images/onboarding-flow.png" alt="" class="center" id="flows">
-              <img src="images/create-flow.png" alt="" class="center" id="flows">
-              <img src="images/share-flow.png" alt="" class="center" id="flows">
-              <img src="images/move-flow.png" alt="" class="center" id="flows">
+              <img src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
+              <img src="images/create-flow.png" alt="" class="center" id="eighty-vw">
+              <img src="images/share-flow.png" alt="" class="center" id="eighty-vw">
+              <img src="images/move-flow.png" alt="" class="center" id="eighty-vw">
             <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button">VIEW USER FLOWS</a>
             <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button">VIEW CONTENT STRATEGY</a>
           </article>
@@ -138,8 +138,8 @@
               <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore,
                 changed the calendar to a vertical scroll that moves with real-time.
               </p>
-              <img src="images/homepage-sketch.png" alt="" class="center" id="wireframes">
-              <img src="images/homepage-wireframe.png" alt="" class="center" id="wireframes">
+              <img src="images/homepage-sketch.png" alt="" class="center" id="eighty-vw">
+              <img src="images/homepage-wireframe.png" alt="" class="center" id="eighty-vw">
             <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button">VIEW WIREFRAME SKETCHES</a>
             <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button">VIEW WIREFRAMES</a>
             <h3>Additional Testing</h3>
@@ -148,7 +148,7 @@
                 by creating a CTA button on the homepage. I continued to conduct additional testing quickly by creating a paper prototype to conduct preference testing. The findings were that users would like to see a To-Do section on their homepage
                 higher in the hierarchy.
               </p>
-              <img src="images/user-testing-sketches.png" alt="" class="center" id="wireframes">
+              <img src="images/user-testing-sketches.png" alt="" class="center" id="eighty-vw">
           </article>
       </section>
       <section>
@@ -158,15 +158,15 @@
                 <h3>Research and Sketching</h3>
                   <p>In order to decide on a brand name, I created a mind map based on our user personas and words that arose when talking about cloud storage.
                   </p>
-                  <img src="images/mindmap.png" alt="" class="center" id="brainstorming">
-                  <img src="images/list-making.png" alt="" class="center" id="brainstorming">
+                  <img src="images/mindmap.png" alt="" class="center" id="eighty-vw">
+                  <img src="images/list-making.png" alt="" class="center" id="eighty-vw">
                   <p>Our product helps turn dreams and ideas into a reality by having everything you need in one place. From our mind mapping experience, I decided on the brand name: Vision, and created a list of words that come to mind when thinking
                     about vision.</p>
 
                   <p>Vision incorporates our product's mission of aligning with your vision or goal, with the added opportunity to create vision boards. I knew I wanted the V in Vision to be part of the logo and for users to feel a sense of clarity and
                     a clear path to reach their destination.
                   </p>
-                  <img src="images/vision-sketches.png" alt="" class="center" id="brainstorming">
+                  <img src="images/vision-sketches.png" alt="" class="center" id="eighty-vw">
               </article>
               <article>
                 <h3>Refining</h3>
@@ -181,9 +181,9 @@
                   <p>Logos
                   </p>
                   <img src="images/main-logo.png" alt="" class="center" id="main-logo">
-                  <img src="images/vision-type-logo.png" alt="" class="center" id="type-logo">
+                  <img src="images/vision-type-logo.png" alt="" class="center" id="eighty-vw">
                   <p>Color Palette</p>
-                  <img src="images/color-palette.png" alt="" class="center" id="color-palette">
+                  <img src="images/color-palette.png" alt="" class="center" id="eighty-vw">
                   <p>Typeface</p>
                   <ul class="typeface">
                     <li>H1 - Muli Bold 36 pts</li>
@@ -207,9 +207,9 @@
               <h3>Hi-Fidelity Prototype</h3>
                 <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                   remained cohesive.</p>
-                <img src="images/preference-test-1.png" alt="" class="center" id="preference-test">
-                <img src="images/preference-test-2.png" alt="" class="center" id="preference-test">
-                <img src="images/first-hifi.png" alt="" class="center" id="preference-test">
+                <img src="images/preference-test-1.png" alt="" class="center" id="eighty-vw">
+                <img src="images/preference-test-2.png" alt="" class="center" id="eighty-vw">
+                <img src="images/first-hifi.png" alt="" class="center" id="eighty-vw">
                 <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                   try a new approach that allowed users to easily change without excessive scrolling.
 
@@ -223,8 +223,8 @@
                   could view both their agenda and monthly calendar on their homepage. The Agenda went back to a vertical scroll which the tick would move in real-time. The side navigation bar is collapsible, and it is on every page throughout the
                   prototype. Instead of having an upload button, there is a create icon where a pop out occurs with the options to create a document, spreadsheet, presentation, vision board, upload, and folder.
                 </p>
-                <img src="images/desktop-1.png" alt="" class="center" id="desktop-1">
-                <img src="images/desktop-2.png" alt="" class="center" id="desktop-2">
+                <img src="images/desktop-1.png" alt="" class="center" id="desktop">
+                <img src="images/desktop-2.png" alt="" class="center" id="desktop">
                 <img src="images/mobile-1.png" alt="" class="center" id="mobile-proto">
                 <img src="images/mobile-2.png" alt="" class="center" id="mobile-proto">
             </article>
