--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/vision.css">
   <link rel="stylesheet" href="styles/menu.css">
 
 </head>
@@ -33,18 +33,20 @@
       </header>
     </nav>
         <div class="main-container">
-          <h2> Hi, I'm Alana!</h2>
+          <h2 class="hello"> Hi, I'm Alana!</h2>
           <ul>
-            <li><h3 class="freight"> A Product Designer</h3></li>
-            <li><h3 class="freight">based in San Francisco</h3></li>
+            <li><h3> A Product Designer</h3></li>
+            <li><h3>based in San Francisco</h3></li>
           </ul>
             <p class="intro">Driven by research and human connection, I solve problems by addressinng user needs and designing for a better future.</p>
           <section>
             <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
-            <h6>User Experience Design</h6>
-            <h5>Vision</h5>
+            <h6 class="left">User Experience Design</h6>
+            <h5 class="left">Vision</h5>
               <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
-            <h6 class="case-study">View Case Study</h6>
+            <div class="view-casestudy">
+              <h6 class="button">View Case Study</h6>
+            </div>
           </section>
         </div>
         <footer>
