--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
-  <link rel="stylesheet" href="styles/vision.css">
+  <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/menu.css">
 
 </head>
@@ -38,7 +38,7 @@
             <li><h3> A Product Designer</h3></li>
             <li><h3>based in San Francisco</h3></li>
           </ul>
-            <p class="intro">Driven by research and human connection, I solve problems by addressinng user needs and designing for a better future.</p>
+            <p class="intro">Driven by research and human connection, I solve problems by addressing user needs and designing for a better future.</p>
           <section>
             <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
             <h6 class="left">User Experience Design</h6>
