--- a/project.html
+++ b/project.html
@@ -36,7 +36,7 @@
       <div class="box-1">
         <img src="images/Vision-logo.png" alt="project-name" class="project-name">
         <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-        <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button">VIEW PROTOTYPE</a>
+        <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button" target="_blank">VIEW PROTOTYPE</a>
         <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
       </div>
       <ul><h2>Design roles</h2>
@@ -86,7 +86,7 @@
                 <img src="images/ux-chart.png" alt="" class="center" id="eighty-vw">
                 <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
                 </p>
-              <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button">VIEW SURVEY</a>
+              <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button" target="_blank">VIEW SURVEY</a>
             </article>
             <article>
               <h3>Competitve Analysis</h3>
@@ -99,7 +99,7 @@
                   where their strengths are and where they fall short in order to best determine the most important features and how we could enter the market. Some of the strengths were excellent integration and the opportunity to create content within,
                   while a weakness was lack of ability to support tagging. While Google Drive and Dropbox do not support tagging, this creates an opportunity for a competitor to enter the market, which will allow users to connect and collaborate quicker.
                 </p>
-              <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing" class="button">VIEW COMPETITIVE ANALYSIS</a>
+              <a href="https://docs.google.com/document/d/1adfJT972ZMk4ucm7QaX1xPNgcy_axs6_1Xe8qYZ87Ao/edit?usp=sharing" class="button" target="_blank">VIEW COMPETITIVE ANALYSIS</a>
             </article>
             <article>
               <H3>User Personas</H3>
@@ -108,7 +108,7 @@
                 <img src="images/Laura.png" alt="" class="center">
                 <img src="images/Jess.png" alt="" class="center">
                 <img src="images/Alex.png" alt=""class="center">
-              <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1" class="button">VIEW USER PERSONAS</a>
+              <a href="https://www.figma.com/file/GL8xgxU5IN73SQDPRn3fOK/Cloud-Storage-User-Personas?node-id=0%3A1" class="button" target="_blank">VIEW USER PERSONAS</a>
             </article>
           </div>
       </section>
@@ -130,8 +130,8 @@
               <img src="images/create-flow.png" alt="" class="center" id="eighty-vw">
               <img src="images/share-flow.png" alt="" class="center" id="eighty-vw">
               <img src="images/move-flow.png" alt="" class="center" id="eighty-vw">
-            <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button">VIEW USER FLOWS</a>
-            <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button">VIEW CONTENT STRATEGY</a>
+            <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button" target="_blank">VIEW USER FLOWS</a>
+            <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button" target="_blank">VIEW CONTENT STRATEGY</a>
           </article>
           <article>
             <h3>Wireframes</h3>
@@ -140,8 +140,8 @@
               </p>
               <img src="images/homepage-sketch.png" alt="" class="center" id="eighty-vw">
               <img src="images/homepage-wireframe.png" alt="" class="center" id="eighty-vw">
-            <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button">VIEW WIREFRAME SKETCHES</a>
-            <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button">VIEW WIREFRAMES</a>
+            <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
+            <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
             <h3>Additional Testing</h3>
 
               <p>Once the digital wireframes were created I conducted usability testing to gain insight on how others view and move through the site. The findings were that it was not intuitive to look in drive for the Upload button. This was solved
@@ -197,7 +197,7 @@
                     <li>Buttons - Roboto Black 15 pts</li>
                     <li>Document Tile - Montserrat Medium 12 pts</li>
                   </ul>
-                <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1" class="button">VIEW STYLE GUIDE</a>
+                <a href="https://www.figma.com/file/X18tAE0IsbHBZmLsISXD0k/Style-Guide-Final?node-id=0%3A1" class="button" target="_blank">VIEW STYLE GUIDE</a>
               </article>
             </div>
         </section>
@@ -242,9 +242,9 @@
       <footer>
         <h4>Let's connect!</h4>
         <div class="footer-icons">
-          <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/">
+          <a href="https://www.linkedin.com/in/alana-macedo-b3347015b/" target="_blank">
             <img src="images/linked-in-icon.png" alt="images/linked-in-icon.png" class="social-media" width="width" height="height"></a>
-          <a href="https://www.facebook.com/alana.macedo.16">
+          <a href="https://www.facebook.com/alana.macedo.16" target="_blank">
             <img src="images/facebook-icon.png" alt="images/facebook-icon.png" class="social-media fb" width="width" height="height"></a>
           <a href="contact.html">
           <img src="images/email-icon.png" alt="images/email-icon.png" class="social-media" width="width" height="height"></a>
