--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h5 class="left">Vision</h5>
               <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
             <div class="view-casestudy">
-              <h6 class="button">View Case Study</h6>
+              <a href="project.html" class="button">View Case Study</a>
             </div>
           </section>
         </div>
