--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="stylesheet" href="styles/menu.css">
 
 </head>
   <body>
@@ -45,7 +44,7 @@
             <h5 class="left">Vision</h5>
               <p>A cloud storage application with administrative feature that help users create, connect, and collaborate in real time.</p>
             <div class="view-casestudy">
-              <a href="project.html" class="button">View Case Study</a>
+              <a href="project.html" class="button">VIEW CASE STUDY</a>
             </div>
           </section>
         </div>
