--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
             </ul>
           </label>
         </div>
-        <button class="submit" type="submit">Send Message</button>
+        <input type="submit" id="button" value="Send Message"</input>
       </form>
     </div>
   </div>
