--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/bub7yri.css">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/style.css">
-    
+
   </head>
 
   <body>
@@ -39,12 +39,12 @@
         <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button" target="_blank">VIEW PROTOTYPE</a>
         <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
       </div>
-      <ul><h2>Design roles</h2>
+      <ul><h2 class="border">Design roles</h2>
         <li>UX Research and Design</li>
         <li>Branding and Identity</li>
         <li>Visual Design</li>
       </ul>
-      <ul><h2>Deliverables</h2>
+      <ul><h2 class="border">Deliverables</h2>
         <li>User Surveys</li>
         <li>User Interviews</li>
         <li>Competitve Analysis</li>
@@ -57,7 +57,7 @@
         <li>A/B Testing</li>
         <li>Visual Design</li>
         </ul>
-      <ul><h2>Tools</h2>
+      <ul><h2 class="border">Tools</h2>
         <li>Pen/Paper</li>
         <li>Google Suite</li>
         <li>Figma</li>
