--- a/project.html
+++ b/project.html
@@ -39,13 +39,15 @@
         <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button" target="_blank">VIEW PROTOTYPE</a>
         <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
       </div>
-      <ul><h2 class="border">Design roles</h2>
-        <li>UX Research and Design</li>
+      <ul><h2>Design roles</h2>
+        <hr>
+        <li class="top">UX Research and Design</li>
         <li>Branding and Identity</li>
         <li>Visual Design</li>
       </ul>
-      <ul><h2 class="border">Deliverables</h2>
-        <li>User Surveys</li>
+      <ul><h2>Deliverables</h2>
+        <hr>
+        <li class="top">User Surveys</li>
         <li>User Interviews</li>
         <li>Competitve Analysis</li>
         <li>User Personas</li>
@@ -57,8 +59,9 @@
         <li>A/B Testing</li>
         <li>Visual Design</li>
         </ul>
-      <ul><h2 class="border">Tools</h2>
-        <li>Pen/Paper</li>
+      <ul><h2>Tools</h2>
+        <hr>
+        <li class="top">Pen/Paper</li>
         <li>Google Suite</li>
         <li>Figma</li>
         <li>Adobe Illustrator</li>
@@ -178,13 +181,13 @@
               </article>
               <article>
                 <h3>Style Guide</h3>
-                  <p>Logos
+                  <p class="change-font">Logos
                   </p>
                   <img src="images/main-logo.png" alt="" class="center" id="main-logo">
                   <img src="images/vision-type-logo.png" alt="" class="center" id="eighty-vw">
-                  <p>Color Palette</p>
+                  <p class="change-font">Color Palette</p>
                   <img src="images/color-palette.png" alt="" class="center" id="eighty-vw">
-                  <p>Typeface</p>
+                  <p class="change-font">Typeface</p>
                   <ul class="typeface">
                     <li>H1 - Muli Bold 36 pts</li>
                     <li>Muli ExtraLight 36 pts in template</li>
@@ -207,8 +210,10 @@
               <h3>Hi-Fidelity Prototype</h3>
                 <p> With the style guide created, I built out the first high fidelity desktop and mobile prototype and conducted preference tests to ensure positive design decisions. It was important to make sure that both mobile and desktop designs
                   remained cohesive.</p>
-                <img src="images/preference-test-1.png" alt="" class="center" id="eighty-vw">
-                <img src="images/preference-test-2.png" alt="" class="center" id="eighty-vw">
+                <img src="images/usability-test-1.png" alt="" class="center" id="eighty-vw">
+                  <p> 52% of users chose swiping to view each section.</p>
+                <img src="images/usability-test-2.png" alt="" class="center" id="eighty-vw">
+                  <p> 52% of users chose the blue sections over dividers.</p>
                 <img src="images/first-hifi.png" alt="" class="center" id="eighty-vw">
                 <p>From the preference test for the Quick Access and Drive layouts, I learned that half the users chose the horizontal swiping to view each section over clicking the carrot to change, and then vertical scrolling. From this I decided to
                   try a new approach that allowed users to easily change without excessive scrolling.
