--- a/project.html
+++ b/project.html
@@ -42,10 +42,14 @@
       </nav>
       <div class="main-container">
         <div class="box-1">
-          <img src="images/Vision-logo.png" alt="project-name" class="project-name">
-          <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
-          <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" target="_blank">VIEW PROTOTYPE</a>
-          <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
+          <div class="logo-text-button">
+            <img src="images/Vision-logo.png" alt="project-name" class="project-name">
+            <p>A cloud storage application with administrative features that help users create, connect, and collaborate in real time.</p>
+            <a href="https://www.figma.com/file/n1bV65dnbhnE3hULdYOR1z/Vision--Desktop-Hi-Fi-Final" class="button proto-button" target="_blank">VIEW PROTOTYPE</a>
+          </div>
+          <div class="proto-image">
+            <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
+          </div>
         </div>
         <ul><h2>Design roles</h2>
           <hr>
