--- a/project.html
+++ b/project.html
@@ -51,34 +51,36 @@
             <img src="images/desktop-proto.png" alt="images/desktop-proto.png" class="center" id="desktop-proto">
           </div>
         </div>
-        <ul><h2>Design roles</h2>
-          <hr>
-          <li class="top">UX Research and Design</li>
-          <li>Branding and Identity</li>
-          <li>Visual Design</li>
-        </ul>
-        <ul><h2>Deliverables</h2>
-          <hr>
-          <li class="top">User Surveys</li>
-          <li>User Interviews</li>
-          <li>Competitve Analysis</li>
-          <li>User Personas</li>
-          <li>User Stories and Flows</li>
-          <li>Content Strategy</li>
-          <li>Wireframes</li>
-          <li>Branding and Identity</li>
-          <li>Prototyping</li>
-          <li>A/B Testing</li>
-          <li>Visual Design</li>
+        <div class="accomplished">
+          <ul class="roles"><h2>Design roles</h2>
+            <hr>
+            <li class="top">UX Research and Design</li>
+            <li>Branding and Identity</li>
+            <li>Visual Design</li>
           </ul>
-        <ul><h2>Tools</h2>
-          <hr>
-          <li class="top">Pen/Paper</li>
-          <li>Google Suite</li>
-          <li>Figma</li>
-          <li>Adobe Illustrator</li>
-          <li>Usability Hub</li>
-        </ul>
+          <ul class="deliverables"><h2>Deliverables</h2>
+            <hr>
+            <li class="top">User Surveys</li>
+            <li>User Interviews</li>
+            <li>Competitve Analysis</li>
+            <li>User Personas</li>
+            <li>User Stories and Flows</li>
+            <li>Content Strategy</li>
+            <li>Wireframes</li>
+            <li>Branding and Identity</li>
+            <li>Prototyping</li>
+            <li>A/B Testing</li>
+            <li>Visual Design</li>
+            </ul>
+          <ul class="tools"><h2>Tools</h2>
+            <hr>
+            <li class="top">Pen/Paper</li>
+            <li>Google Suite</li>
+            <li>Figma</li>
+            <li>Adobe Illustrator</li>
+            <li>Usability Hub</li>
+          </ul>
+        </div>
         <section>
           <h2>The Problem:</h2>
             <p>Users were frustrated with juggling multiple apps to manage their day and collaborate with others on projects.
