--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,13 @@
         </div>
       </div>
     </div>
+    <div class="desktop-nav">
+      <ul>
+        <li><a href="index.html">Work</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="resume.html">Resume</a></li>
+      </ul>
+    </div>
     <header>
       <a href="index.html">
         <img src="images/my-logo.png" alt="images/my-logo.png" class="my-logo"></a>
