--- a/project.html
+++ b/project.html
@@ -110,15 +110,17 @@
                     <p>I conducted a user survey to better understand how and why users use cloud storage. I knew that users liked that they could quickly share content with others, but I wanted to know if they had a process for brainstorming, such as using
                       mood or vision boards.
                     </p>
-                    <div class="graph">
-                      <img src="images/ux-graph.png" alt="" class="center" id="eighty-vw">
-                      <p>What people use their cloud storage for most
-                      </p>
-                    </div>
-                    <div class="chart">
-                      <img src="images/ux-chart.png" alt="" class="center" id="shrink">
-                      <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
-                      </p>
+                    <div class="research">
+                      <div class="graph">
+                        <img src="images/ux-graph.png" alt="" class="center" id="eighty-vw">
+                        <p>What people use their cloud storage for most
+                        </p>
+                      </div>
+                      <div class="chart">
+                        <img src="images/ux-chart.png" alt="" class="center" id="shrink">
+                        <p>51% percent of of participants might use a cloud storage app to create a vision, 18.9% said they would use it.
+                        </p>
+                      </div>
                     </div>
                   <a href="https://docs.google.com/document/d/1gnw5JfLjWsi2-l_1J86oFoY_YDmTDkYvC2INiD7Vbvc/edit" class="button" target="_blank">VIEW SURVEY</a>
                 </article>
@@ -156,16 +158,22 @@
                   <p>Derived from the goals and frustrations,
                     I created User Stories that show the users potential tasks.
                   </p>
-                  <img src="images/user-stories.png" alt="" class="center">
+                  <img src="images/user-stories.png" alt="" class="center" id="eighty-vw">
               </aritcle>
               <article>
                 <h3>User Flows</h3>
                   <p>From the stories, I sketched out each individual flow to begin to create the content strategy.
                   </p>
-                  <img src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
-                  <img src="images/create-flow.png" alt="" class="center" id="eighty-vw">
-                  <img src="images/share-flow.png" alt="" class="center" id="eighty-vw">
-                  <img src="images/move-flow.png" alt="" class="center" id="eighty-vw">
+                  <div class="flows">
+                    <div class="flows-1">
+                      <img src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/create-flow.png" alt="" class="center" id="eighty-vw">
+                    </div>
+                    <div class="flows-2">
+                      <img src="images/share-flow.png" alt="" class="center" id="eighty-vw">
+                      <img src="images/move-flow.png" alt="" class="center" id="eighty-vw">
+                    </div>
+                  </div>
                 <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button" target="_blank">VIEW USER FLOWS</a>
                 <a href="https://docs.google.com/document/d/1d2bODiLmxlq3ipJXeJFaJvJ-El9juOQa9AO3gBhaH9A/edit" class="button" target="_blank">VIEW CONTENT STRATEGY</a>
               </article>
@@ -174,8 +182,10 @@
                   <p>When I began wireframing, I sketched out the layout of every page before digitizing it. Along the way I made some design decisions to improve the layout. I noticed that horizontal scrolling was not as intuitive on desktops, therefore,
                     changed the calendar to a vertical scroll that moves with real-time.
                   </p>
-                  <img src="images/homepage-sketch.png" alt="" class="center" id="eighty-vw">
-                  <img src="images/homepage-wireframe.png" alt="" class="center" id="eighty-vw">
+                  <div class="wireframes">
+                    <img src="images/homepage-sketch.png" alt="" class="center wire-sketch" id="eighty-vw">
+                    <img src="images/homepage-wireframe.png" alt="" class="center lo-fi" id="eighty-vw">
+                  </div>
                 <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
                 <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
                 <h3>Additional Testing</h3>
