--- a/project.html
+++ b/project.html
@@ -166,12 +166,12 @@
                   </p>
                   <div class="flows">
                     <div class="flows-1">
-                      <img src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
-                      <img src="images/create-flow.png" alt="" class="center" id="eighty-vw">
+                      <img class="flow-one" src="images/onboarding-flow.png" alt="" class="center" id="eighty-vw">
+                      <img class="flow-one" src="images/create-flow.png" alt="" class="center" id="eighty-vw">
                     </div>
                     <div class="flows-2">
-                      <img src="images/share-flow.png" alt="" class="center" id="eighty-vw">
-                      <img src="images/move-flow.png" alt="" class="center" id="eighty-vw">
+                      <img class="flow-two" src="images/share-flow.png" alt="" class="center" id="eighty-vw">
+                      <img class="flow-two" src="images/move-flow.png" alt="" class="center" id="eighty-vw">
                     </div>
                   </div>
                 <a href="https://drive.google.com/file/d/1urYbhNmpVWsgXFYFD8tg4A-jwrxGuQjf/view?usp=sharing" class="button" target="_blank">VIEW USER FLOWS</a>
