--- a/project.html
+++ b/project.html
@@ -183,8 +183,8 @@
                     changed the calendar to a vertical scroll that moves with real-time.
                   </p>
                   <div class="wireframes">
-                    <img src="images/homepage-sketch.png" alt="" class="center wire-sketch" id="eighty-vw">
-                    <img src="images/homepage-wireframe.png" alt="" class="center lo-fi" id="eighty-vw">
+                    <img class="wire-sketch" src="images/homepage-sketch.png" alt="" class="center" id="eighty-vw">
+                    <img class="lo-fi" src="images/homepage-wireframe.png" alt="" class="center" id="eighty-vw">
                   </div>
                 <a href="https://drive.google.com/file/d/1Bthdczz4e7Mm20xKwkgYWds5Stfjxwuo/view?usp=sharing" class="button" target="_blank">VIEW WIREFRAME SKETCHES</a>
                 <a href="https://www.figma.com/file/o4keCE9UXIxdsFIetV3xQX/Cloud-Storage-Prototype?node-id=0%3A1" class="button" target="_blank">VIEW WIREFRAMES</a>
